<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">meeting_client</string>
	<string name="schedules_title">Ближайшие события</string>
	<string name="login_title">Login</string>
	<string name="pass_title">Pass</string>


	<string name="register_b_title">Register</string>
	<string name="login_b_title">Login</string>
	<string name="success_login">Удачный вход, бро</string>
	<string name="email_title">Email</string>
	<string name="cancel">Cancel</string>
	<string name="remind_title">Remind?</string>
</resources>
