<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.8">

		<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:ems="10"
				android:id="@+id/t_login_register"
				android:hint="@string/login_title"
				android:layout_marginTop="1dp"
				android:layout_marginBottom="5dp"
				android:textSize="25sp"/>

		<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="numberPassword"
				android:ems="10"
				android:id="@+id/t_pass_register"
				android:hint="@string/pass_title"
				android:layout_marginBottom="5dp"
				android:textSize="25sp"/>

		<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:ems="10"
				android:id="@+id/t_email_register"
				android:hint="@string/email_title"
				android:layout_marginBottom="5dp"
				android:textSize="25sp"/>
	</LinearLayout>

	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.2"
			android:gravity="bottom">

		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/register_b_title"
				android:id="@+id/b_apply_register"
				android:layout_weight="0.5"/>

		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cancel"
				android:id="@+id/b_cancel_register"
				android:layout_weight="0.5"/>
	</LinearLayout>
</LinearLayout>